<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leeyenn.workrecorder.RecordPage"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="482dp"
            android:layout_height="960dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/tripDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="0.00"
                android:text="@string/TripDate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tripDateEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tripDateTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/tripDateTextView"
                android:layout_marginTop="33dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tripTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="76dp"
                android:text="@string/TripTime"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tripTimeEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tripTimeTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/tripTimeTextView"
                android:layout_marginTop="93dp"
                android:ems="10"
                android:focusable="false"
                android:inputType="time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/companyNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="136dp"
                android:text="@string/CompanyName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/companyNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/companyNameTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/companyNameTextView"
                android:layout_below="@+id/companyNameTextView"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/companyLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="196dp"
                android:text="@string/CompanyLocation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/companyLocationEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/companyLocationTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/companyLocationTextView"
                android:layout_marginTop="213dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/doorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/getAddressButton"
                android:layout_alignStart="@+id/getAddressButton"
                android:layout_below="@+id/getAddressButton"
                android:layout_marginTop="10dp"
                android:text="@string/Door"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/doorEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/doorTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/doorTextView"
                android:layout_below="@+id/doorTextView"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/typeOfRubbishTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/doorEditText"
                android:layout_alignStart="@+id/doorEditText"
                android:layout_below="@+id/doorEditText"
                android:text="@string/TypeOfRubbish"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/typeOfRubbishEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/typeOfRubbishTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/typeOfRubbishTextView"
                android:layout_below="@+id/typeOfRubbishTextView"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/noOfTripTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/typeOfRubbishEditText"
                android:layout_alignStart="@+id/typeOfRubbishEditText"
                android:layout_below="@+id/typeOfRubbishEditText"
                android:text="@string/NoOfTrips"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/noOfTripEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/noOfTripTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/noOfTripTextView"
                android:layout_below="@+id/noOfTripTextView"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tripPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/noOfTripEditText"
                android:layout_alignStart="@+id/noOfTripEditText"
                android:layout_below="@+id/noOfTripEditText"
                android:text="@string/TripPrice"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/tripPriceditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tripPriceTextView"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/tripPriceTextView"
                android:layout_below="@+id/tripPriceTextView"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/getAddressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/companyLocationEditText"
                android:layout_alignStart="@+id/companyLocationEditText"
                android:layout_below="@+id/companyLocationEditText"
                android:layout_marginTop="16dp"
                android:text="@string/GetAddress" />

            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tripPriceditText"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@+id/doorTextView"
                android:layout_toRightOf="@+id/doorTextView"
                android:text="@string/createBtn" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/createButton"
                android:layout_alignBottom="@+id/createButton"
                android:layout_marginLeft="98dp"
                android:layout_marginStart="98dp"
                android:layout_toEndOf="@+id/createButton"
                android:layout_toRightOf="@+id/createButton"
                android:text="@string/cancelBtn" />

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
